<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tona.mousebrowther.MainActivity" >

    <item
        android:id="@+id/next"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/next"/>
    <item
        android:id="@+id/reload"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/reload"/>
    <item
        android:id="@+id/general_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/general_setting"/>
    <item
        android:id="@+id/cursor_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/cursor_setting"/>
    <item
        android:id="@+id/url_bar"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/search"/>
    <item
        android:id="@+id/bookmark"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/bookmark"/>
    <item
        android:id="@+id/bookmark_add"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/add_bookmark"/>

</menu>