<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gpref" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:disableDependentsState="true"
        android:key="enable_javascript"
        android:title="@string/javascript" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:disableDependentsState="true"
        android:key="enable_cache"
        android:title="@string/cache" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:disableDependentsState="true"
        android:key="enable_pcview"
        android:title="@string/pc_view" />

    <EditTextPreference
        android:inputType="text"
        android:key="homepage"
        android:title="@string/homepage" />

    <ListPreference
        android:dialogTitle="@string/change"
        android:entries="@array/textsize"
        android:entryValues="@array/textsize_values"
        android:key="textsize"
        android:title="@string/textsize" />

</PreferenceScreen>