<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pref" >

    <ListPreference
        android:dialogTitle="@string/change"
        android:entries="@array/entries"
        android:entryValues="@array/entry_values"
        android:key="size_rate"
        android:title="@string/cursor_size_rate" />

    <ListPreference
        android:dialogTitle="@string/change"
        android:entries="@array/entries"
        android:entryValues="@array/entry_values"
        android:key="velocity"
        android:title="@string/cursor_speed_rate" />

    <ListPreference
        android:dialogTitle="@string/change"
        android:entries="@array/scroll_option"
        android:entryValues="@array/scroll_string"
        android:key="range"
        android:title="@string/cursor_operation_range" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:disableDependentsState="true"
        android:key="view_cursor_range"
        android:title="@string/visualize_cursor_operation_range" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:disableDependentsState="true"
        android:key="click_location"
        android:title="@string/visualize_click_position" />

</PreferenceScreen>